<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_android"
            android:checkable="true"
            android:icon="@drawable/ic_android"
            android:title="@string/android" />

        <item
            android:id="@+id/item_ios"
            android:checkable="true"
            android:icon="@drawable/ic_ios"
            android:title="@string/ios" />

        <item
            android:id="@+id/item_windows"
            android:checkable="true"
            android:icon="@drawable/ic_windows"
            android:title="@string/windows" />


        <item
            android:id="@+id/item_blackberry"
            android:checkable="true"
            android:icon="@drawable/ic_blackberry"
            android:title="@string/blackberry" />

        <item
            android:id="@+id/item_ionic"
            android:checkable="true"
            android:icon="@drawable/ic_ionic"
            android:title="@string/ionic" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_css"
            android:checkable="true"
            android:icon="@drawable/ic_css"
            android:title="@string/css" />

        <item
            android:id="@+id/item_html"
            android:checkable="true"
            android:icon="@drawable/ic_html"
            android:title="@string/html" />
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_ruby"
            android:checkable="true"
            android:icon="@drawable/ic_ruby"
            android:title="@string/ruby" />

        <item
            android:id="@+id/item_php"
            android:checkable="true"
            android:icon="@drawable/ic_php"
            android:title="@string/php" />

        <item
            android:id="@+id/item_python"
            android:checkable="true"
            android:icon="@drawable/ic_python"
            android:title="@string/python" />
    </group>
</menu>